--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Unity Cloud Build to HockeyApp",
-  "description": "Receives a payload from Unity Cloud Build webhook. Downloads the binary and posts to the HockeyApp API. Automating deployment from Unity Cloud Build to Hockeyapp.",
+  "description": "Receives a payload from Unity Cloud Build webhook. Downloads the binary and posts to the HockeyApp API.",
   "repository": "https://github.com/Soupware/unitycloudbuildhockeyapp.git",
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
   "keywords": ["unity", "cloud", "build", "hockeyapp"]
