--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "swagger-client": "^2.1.16",
-    "unitycloudbuild-client": "^0.1.6"
+    "unitycloudbuild-client": "git+https://github.com/unitychrism/ucb-nodejs-client"
+  },
+  "engines": {
+    "node": "6.9.4"
   },
   "devDependencies": {},
   "scripts": {
@@ -15,7 +18,10 @@
     "start": "node index.js"
   },
   "author": "Nathan Broadbent",
-  "license": "ISC",
+  "contributors": [
+    "Nigel Rodriguez"
+  ],
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/Soupware/unitycloudbuildhockeyapp.git"
