--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Receives a payload from Unity Cloud Build webhook. Downloads the binary and posts to the HockeyApp API. Automating deployment from Unity Cloud Build to Hockeyapp.",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "1.15.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "form-data": "0.2.0",
+    "lodash": "4.13.1",
+    "najax": "0.7.1",
     "swagger-client": "^2.1.16",
     "unitycloudbuild-client": "git+https://github.com/unitychrism/ucb-nodejs-client"
   },
