--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 UNITYCLOUD_KEY = abc123
 HOCKEYAPP_KEY = abc123
+PORT = 8080
+BRANCH = abc123
+URL = abc123
+USER = abc123
+PASS = abc123
+PROJECTNAME = abc123
