--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-UNITYCLOUD_KEY = abc123
-HOCKEYAPP_KEY = abc123
+UNITYCLOUD_KEY = abcd1234
+HOCKEYAPP_KEY = abcd1234
 PORT = 8080
-BRANCH = abc123
-URL = abc123
-USER = abc123
-PASS = abc123
-PROJECTNAME = abc123
+BRANCH = abcd1234
+URL = github.com/account/repo
+USERNAME = abcd1234
+PASS = abcd1234
+PROJECTNAME = abcd1234
