gitlog now user tmp dir

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-UNITYCLOUD_KEY = abcd1234
-HOCKEYAPP_KEY = abcd1234
+UNITYCLOUD_KEY = abcd1
+HOCKEYAPP_KEY = abcd1
 PORT = 8080
-BRANCH = abcd1234
-URL = github.com/account/repo
-USERNAME = abcd1234
-PASS = abcd1234
-PROJECTNAME = abcd1234
+BRANCH = master
+URL = github.com/yourname/yourproject
+USER = user
+PASS = password
+ENTRIES = 10
