--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "form-data": "0.2.0",
+    "fs": "0.0.1-security",
+    "fs-extra": "^7.0.0",
     "lodash": "4.13.1",
     "najax": "0.7.1",
+    "shelljs": "^0.8.2",
+    "simple-git": "^1.96.0",
     "swagger-client": "^2.1.16",
     "unitycloudbuild-client": "git+https://github.com/unitychrism/ucb-nodejs-client"
   },
