.env variables needed by git now have GIT_ prefix

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 UNITYCLOUD_KEY = abcd1
 HOCKEYAPP_KEY = abcd1
 PORT = 8080
-BRANCH = master
-URL = github.com/yourname/yourproject
-USER = user
-PASS = password
-ENTRIES = 10
+GIT_BRANCH = master
+GIT_URL = github.com/yourname/yourproject
+GIT_USER = user
+GIT_PASS = password
+GIT_ENTRIES = 10
