--- a/app.json
+++ b/app.json
@@ -8,10 +8,10 @@
         "UNITYCLOUD_KEY": "abc123",
         "HOCKEYAPP_KEY": "abc123",
         "PORT": "8080",
-        "BRANCH" : "master",
-        "URL" : "github.com/user/repo",
-        "USERNAME" : "username",
-        "PASS" : "password",
-        "PROJECTNAME" : "projectname"
+        "GIT_BRANCH" : "master",
+        "GIT_URL" : "github.com/user/repo",
+        "GIT_USER" : "username",
+        "GIT_PASS" : "password",
+        "GIT_ENTRIES" : "10"
   }
 }
