--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "engines": {
     "node": "6.9.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^5.4.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
