added option in .env to notify testers on hockeyapp on new release

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-UNITYCLOUD_KEY = abcd1
-HOCKEYAPP_KEY = abcd1
+UNITYCLOUD_KEY = abcd1234
+HOCKEYAPP_KEY = abcd1234
 PORT = 8080
 GIT_BRANCH = master
-GIT_URL = github.com/yourname/yourproject
-GIT_USER = user
+GIT_URL = github.com/username/repository
+GIT_USER = username
 GIT_PASS = password
-GIT_ENTRIES = 10
+GIT_ENTRIES = 15
+HOCKEYAPP_SEND_NOTIFICATION = true
